<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121">

    <!-- App Name and Profile Picture (Header) -->

    <!-- Large Mood Image -->

    <!-- Mood Name -->

    <!-- Description -->

    <!-- Playlist Grid (3 Images/Buttons) -->

    <!-- Bottom Navigation Bar -->

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mood_image4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/playlist"
        android:contentDescription="@string/playlist_mood_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <ImageView
        android:id="@+id/mood_image3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/playlist"
        android:contentDescription="@string/playlist_mood_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <ImageView
        android:id="@+id/mood_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/playlist"
        android:contentDescription="@string/playlist_mood_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <ImageView
        android:id="@+id/mood_image2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/playlist"
        android:contentDescription="@string/playlist_mood_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <LinearLayout
        android:id="@+id/playlist_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recents">

        <!-- 1st Playlist Button -->

        <ImageView
            android:id="@+id/playlist_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:background="#E1BEE7"
            android:contentDescription="@string/playlist" />

        <!-- 2nd Playlist Button -->
        <ImageView
            android:id="@+id/playlist_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:background="#00BCD4"
            android:contentDescription="@string/playlist" />

        <ImageView
            android:id="@+id/playlist_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:background="#E1BEE7"
            android:contentDescription="@string/playlist" />

        <!-- 3rd Playlist Button -->
        <ImageView
            android:id="@+id/playlist_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:background="#FFF59D"
            android:contentDescription="@string/playlist" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            android:padding="16dp"
            tools:srcCompat="@drawable/home_nav" />

        <ImageView
            android:id="@+id/nav_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            android:padding="16dp"
            tools:srcCompat="@drawable/search_active_nav" />

        <ImageView
            android:id="@+id/nav_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/music"
            android:padding="16dp"
            tools:srcCompat="@drawable/music_nav" />

        <ImageView
            android:id="@+id/nav_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile"
            android:padding="9dp"
            tools:srcCompat="@drawable/profile_pic" />
    </LinearLayout>

    <TextView
        android:id="@+id/Recents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Recents"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/mood_image3"
        tools:layout_editor_absoluteX="29dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
